# ai-sw-dev-course

./: .gitignore  README.md
00_database-sql/: 00_note.md
00_database-sql/00-1_crud-data/: crud-data.md  crud-data.sql  employee.sql  instructor.sql  medals.sql
00_database-sql/00-1_database-sql/: 01_crud-data.sql  03_filtering-data.sql  05_python-data.sql  06_advanced-data.sql
00_database-sql/00-2_ddl-data/: author-table.sql  book.sql  ddl-data.md  ddl-data.sql
00_web-basic/: 00_note.md
01_llm/: 01_note.md
01_llm/01_exam/: cot-examples.md
02_ai-agent-coding/: 02_note.md
03_ai-ide/: 03_note.md
04_agent-manager/: 04_note.md
05_claude-code/: 05_note.md
06_ai-service/: 06_note.md
07-agentic-coding/: call_agent.py
07-invoice-agent/: 02_invoice_agent_with_experts.py  README.md  purchasing_rules.txt
07_agentic-coding/: 07_note.md
07_agentic-coding/07-4_cs-crew/cs_crew/: README.md  pyproject.toml
07_agentic-coding/07-4_cs-crew/cs_crew/output/: post.md
07_agentic-coding/07-4_cs-crew/cs_crew/src/cs_crew/: main.py
07_agentic-coding/07-4_cs-crew/cs_crew/src/cs_crew/crews/content_crew/: content_crew.py
07_agentic-coding/07-4_cs-crew/cs_crew/src/cs_crew/crews/content_crew/config/: agents.yaml  tasks.yaml
08-agentic-coding/: virtual-panel.md
08_langgraph/: 03_langgraph_components.ipynb  05_persistence_and_streaming.ipynb  06_human_in_the_loop.ipynb  08-2_agentic_search.ipynb  08-5_essay_agent.ipynb  08_note.md
setup/: _tools.md  docker-desktop.md  git.md  github-desktop.md  node.md  ollama.md  uv.md  virtual-panel.md  vscode-extensions.md
(+105 files in other folders)
