[project]
name = "cs_crew"
version = "0.1.0"
description = "cs-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
kickoff = "cs_crew.main:kickoff"
run_crew = "cs_crew.main:kickoff"
plot = "cs_crew.main:plot"
run_with_trigger = "cs_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
